--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -1,181 +1,18 @@
-@ONLINE{aachen_figure,
-	author = {RWTH Aachen, D.},
-	title = {Computer Graphics and Multimedia},
-	month = jan,
-	year = {2016},
-	url = {https://graphics.rwth-aachen.de/media/paper_images/149_1.png},
-	note = {Last accessed 21 January 2016}
-}
-
-@ONLINE{patient_figure,
-	author = {Simon, Sim},
-	title = {Doctor's wordpress blog},
-	month = jan,
-	year = {2016},
-	url = {https://simonsim.files.wordpress.com/2012/07/cranioplasty-1.jpg?w=448&h=336},
-	note = {Last accessed 25 January 2016}
-}
-
-# alternative for online resource 
-@misc{Patterson2013,
-	author = {Patterson, Dave},
-	title = {Dave Patterson's Writing Advice},
-	year = {2013},
-	url = {http://www.cs.berkeley.edu/~pattrsn/talks/writingtips.html},
-	note = {Last accessed 16 July 2013}
-}
-
-@article{accurate,
-  title={Accurate triangulations of deformed, intersecting surfaces},
-  author={Von Herzen, Brian and Barr, Alan H},
-  journal={ACM SIGGRAPH Computer Graphics},
-  volume={21},
-  number={4},
-  pages={103--110},
-  year={1987},
-  publisher={ACM}
-}
-
-@article{rengier20103d,
-  title={3D printing based on imaging data: review of medical applications},
-  author={Rengier, Fabian and Mehndiratta, A and von Tengg-Kobligk, Hendrik and Zechmann, Christian M and Unterhinninghofen, Roland and Kauczor, H-U and Giesel, Frederik L},
-  journal={International journal of computer assisted radiology and surgery},
-  volume={5},
-  number={4},
-  pages={335--341},
-  year={2010},
-  publisher={Springer}
-}
-
-@misc{arnold1991calibration,
-  title={Calibration phantom for computer tomography system},
-  author={Arnold, B.A.},
-  url={https://www.google.ch/patents/US4985906},
-  year={1991},
-  month=jan # "~15",
-  publisher={Google Patents},
-  note={US Patent 4,985,906}
-}
-
-@misc{arnold1990automated,
-  title={Automated image detail localization method},
-  author={Arnold, B.A. and Rowberg, A.H.},
-  url={http://www.google.com.nf/patents/US4922915},
-  year={1990},
-  month=may # "~8",
-  publisher={Google Patents},
-  note={US Patent 4,922,915}
-}
-
-@article{todd1923effect,
-  title={The effect of maceration and drying upon the linear dimensions of the green skull},
-  author={Todd, T Wingate},
-  journal={Journal of anatomy},
-  volume={57},
-  number={Pt 4},
-  pages={336},
-  year={1923},
-  publisher={Blackwell Publishing}
-}
-
-@article{de1990value,
-  title={The value of the macerated skull as a model used in orthopaedic research},
-  author={De Clerck, H and Dermaut, L and Timmerman, H},
-  journal={European journal of orthodontics},
-  volume={12},
-  number={3},
-  pages={263},
-  year={1990},
-  publisher={Eur Orthodontic Soc}
-}
-
-@article{swennen2007use,
-  title={The use of a new 3D splint and double CT scan procedure to obtain an accurate anatomic virtual augmented model of the skull},
-  author={Swennen, GRJ and Barth, E-L and Eulzer, C and Schutyser, F},
-  journal={International journal of oral and maxillofacial surgery},
-  volume={36},
-  number={2},
-  pages={146--152},
-  year={2007},
-  publisher={Elsevier}
-}
-
-@article{akca2007matching,
-  title={Matching of 3D surfaces and their intensities},
-  author={Akca, Devrim},
-  journal={ISPRS Journal of Photogrammetry and Remote Sensing},
-  volume={62},
-  number={2},
-  pages={112--121},
-  year={2007},
-  publisher={Elsevier}
-}
-
-@misc{fransdebeer,
-  title={{3D} modeling and surface matching},
-  author={De Beer, F},
-  year={2016},
-  publisher={Personal conversation}
-}
-
-@misc{maikelbeerens,
-  title={Xilloc company tour},
-  author={Beerens, M},
-  year={2016},
-  publisher={Personal conversation}
-}
-
-@article{gruen2005least,
-  title={Least squares 3D surface and curve matching},
-  author={Gruen, Armin and Akca, Devrim},
-  journal={ISPRS Journal of Photogrammetry and Remote Sensing},
-  volume={59},
-  number={3},
-  pages={151-174},
-  year={2005},
-  publisher={Elsevier}
-}
-
-@article{121791, 
-	author={Besl, P.J. and McKay, N.}, 
-	journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on}, 
-	title={A method for registration of 3-D shapes}, 
-	year={1992}, 
-	volume={14}, 
-	number={2}, 
-	pages={239-256},
-	doi={10.1109/34.121791} 
-}
-
-@article{cignoni1998metro,
-  title={Metro: measuring error on simplified surfaces},
-  author={Cignoni, Paolo and Rocchini, Claudio and Scopigno, Roberto},
-  journal={Computer Graphics Forum},
-  volume={17},
-  number={2},
-  pages={167-174},
-  year={1998},
-  organization={Wiley Online Library}
-}
-
-@article{lethaus2011treatment,
-  title={A treatment algorithm for patients with large skull bone defects and first results},
-  author={Lethaus, B. and Ter Laak, M. and Laeven, P. and Beerens, M. and Koper, D. and Poukens, J. and Kessler, P.},
-  journal={Journal of Cranio-Maxillofacial Surgery},
-  volume={39},
-  number={6},
-  pages={435-440},
-  year={2011},
-  publisher={Elsevier}
-}
-
-@article{wang20033d,
-  title={3D brain surface matching based on geodesics and local geometry},
-  author={Wang, Yongmei and Peterson, Bradley S and Staib, Lawrence H},
-  journal={Computer Vision and Image Understanding},
-  volume={89},
-  number={2},
-  pages={252--271},
-  year={2003},
-  publisher={Elsevier}
+@article{Schuld2014,
+archivePrefix = {arXiv},
+arxivId = {1409.3097},
+author = {Schuld, M. and Sinayskiy, I. and Petruccione, F.},
+doi = {10.1080/00107514.2014.964942},
+eprint = {1409.3097},
+file = {:home/mark/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Schuld, Sinayskiy, Petruccione - 2014 - An introduction to quantum machine learning.pdf:pdf},
+isbn = {9780128009536},
+issn = {0010-7514},
+journal = {arXiv},
+keywords = {artificial intelligence,machine learning,quantum computing,quantum machine learning},
+mendeley-groups = {QML Thesis},
+number = {November},
+pages = {19},
+title = {{An introduction to quantum machine learning}},
+url = {http://arxiv.org/abs/1409.3097},
+year = {2014}
 }
