--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -16,3 +16,82 @@ title = {{An introduction to quantum machine learning}},
 url = {http://arxiv.org/abs/1409.3097},
 year = {2014}
 }
+
+@article{acharya2015integrated,
+  title={An integrated index for detection of sudden cardiac death using discrete wavelet transform and nonlinear features},
+  author={Acharya, U Rajendra and Fujita, Hamido and Sudarshan, Vidya K and Sree, Vinitha S and Eugene, Lim Wei Jie and Ghista, Dhanjoo N and San Tan, Ru},
+  journal={Knowledge-Based Systems},
+  volume={83},
+  pages={149--158},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@misc{bigdata,
+author={IBM},
+title = {What is big data?},
+howpublished = {\url{https://www-01.ibm.com/software/data/bigdata/what-is-big-data.html}},
+  note = {Accessed: 2016-09-08},
+year={2016}
+}
+
+@misc{dwave2,
+author={D-Wave},
+title = {Breaking through 1000 Qubits },
+howpublished = {\url{http://www.dwavesys.com/blog/2015/06/breaking-through-1000-qubits}},
+  note = {Accessed: 2010-09-08},
+year={2015}
+}
+
+
+@article{shor1994,
+  title={Polynomial-Time Algorithm For Prime Factorization And Discrete Logarithms On A Quantum Computer: Proc},
+  author={Shor, Peter W},
+  booktitle={35th Annual Symp. on the Foundations of Computer Science},
+  pages={124},
+  year={1994}
+}
+
+@article{HHL2009,
+archivePrefix = {arXiv},
+arxivId = {arXiv:0811.3171v3},
+author = {Harrow, Aram W. and Hassidim, Avinatan and Lloyd, Seth},
+doi = {10.1103/PhysRevLett.103.150502},
+eprint = {arXiv:0811.3171v3},
+file = {:home/mark/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Harrow, Hassidim, Lloyd - 2009 - Quantum algorithm for linear systems of equations.pdf:pdf},
+issn = {00319007},
+journal = {Physical Review Letters},
+mendeley-groups = {QML Thesis},
+number = {15},
+pages = {1--4},
+pmid = {19905613},
+title = {{Quantum algorithm for linear systems of equations}},
+volume = {103},
+year = {2009}
+}
+@article{qRAM,
+  title={Quantum random access memory},
+  author={Giovannetti, Vittorio and Lloyd, Seth and Maccone, Lorenzo},
+  journal={Physical review letters},
+  volume={100},
+  number={16},
+  pages={160501},
+  year={2008},
+  publisher={APS}
+}
+
+@article{hydrogensimulation,
+  title = {Scalable Quantum Simulation of Molecular Energies},
+  author = {O'Malley, P. J. J. and Babbush, R. and Kivlichan, I. D. and Romero, J. and McClean, J. R. and Barends, R. and Kelly, J. and Roushan, P. and Tranter, A. and Ding, N. and Campbell, B. and Chen, Y. and Chen, Z. and Chiaro, B. and Dunsworth, A. and Fowler, A. G. and Jeffrey, E. and Lucero, E. and Megrant, A. and Mutus, J. Y. and Neeley, M. and Neill, C. and Quintana, C. and Sank, D. and Vainsencher, A. and Wenner, J. and White, T. C. and Coveney, P. V. and Love, P. J. and Neven, H. and Aspuru-Guzik, A. and Martinis, J. M.},
+  journal = {Phys. Rev. X},
+  volume = {6},
+  issue = {3},
+  pages = {031007},
+  numpages = {13},
+  year = {2016},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevX.6.031007},
+  url = {http://link.aps.org/doi/10.1103/PhysRevX.6.031007}
+}
+
