--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -95,3 +95,50 @@ year = {2009}
   url = {http://link.aps.org/doi/10.1103/PhysRevX.6.031007}
 }
 
+@article{Cai2015,
+archivePrefix = {arXiv},
+arxivId = {1409.7770},
+author = {Cai, X. D. and Wu, D. and Su, Z. E. and Chen, M. C. and Wang, X. L. and Li, Li and Liu, N. L. and Lu, C. Y. and Pan, J. W.},
+doi = {10.1103/PhysRevLett.114.110504},
+eprint = {1409.7770},
+file = {:home/mark/QML{\_}Thesis/Paper/Cai 14 Entanglement-Based Quantum Machine Learning.pdf:pdf},
+isbn = {0031-9007},
+issn = {10797114},
+journal = {Physical Review Letters},
+number = {11},
+pages = {1--5},
+pmid = {25839250},
+title = {{Entanglement-based machine learning on a quantum computer}},
+volume = {114},
+year = {2015}
+}
+@article{Li2015,
+archivePrefix = {arXiv},
+arxivId = {1410.1054},
+author = {Li, Zhaokai and Liu, Xiaomei and Xu, Nanyang and Du, Jiangfeng},
+doi = {10.1103/PhysRevLett.114.140504},
+eprint = {1410.1054},
+file = {:home/mark/QML{\_}Thesis/Paper/Li 14 Experimental Realization of a Quantum SVM.pdf:pdf},
+isbn = {0031-9007},
+issn = {10797114},
+journal = {Physical Review Letters},
+number = {14},
+pages = {1--5},
+pmid = {25910101},
+title = {{Experimental realization of a quantum support vector machine}},
+volume = {114},
+year = {2015}
+}
+@article{Riste2015,
+archivePrefix = {arXiv},
+arxivId = {1512.06069},
+author = {Rist{\`{e}}, D. and da Silva, Marcus P. and Ryan, Colm A. and Cross, Andrew W. and Smolin, John A. and Gambetta, Jay M. and Chow, Jerry M. and Johnson, Blake R.},
+eprint = {1512.06069},
+file = {:home/mark/QML{\_}Thesis/Paper/Riste 15 Demonstration of quantum advantage in machine learning.pdf:pdf},
+journal = {arXiv:1512.06069},
+pages = {1--12},
+title = {{Demonstration of quantum advantage in machine learning}},
+url = {http://arxiv.org/abs/1512.06069},
+year = {2015}
+}
+
