--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -1,4 +1,4 @@
-@article{Schuld2014,
+@article{Schuld2014intro,
 archivePrefix = {arXiv},
 arxivId = {1409.3097},
 author = {Schuld, M. and Sinayskiy, I. and Petruccione, F.},
@@ -16,6 +16,38 @@ title = {{An introduction to quantum machine learning}},
 url = {http://arxiv.org/abs/1409.3097},
 year = {2014}
 }
+
+@article{Schuld2016,
+archivePrefix = {arXiv},
+arxivId = {1601.07823},
+author = {Schuld, Maria and Sinayskiy, Ilya and Petruccione, Francesco},
+eprint = {1601.07823},
+file = {:home/mark/QML{\_}Thesis/Paper/schuld{\_}linearregression.pdf:pdf},
+keywords = {algorithm,image recognition,least squares,linear regression,matrix inversion,pattern classification,quantum,quantum machine learning},
+mendeley-groups = {QML Thesis},
+pages = {5},
+title = {{Pattern classification with linear regression on a quantum computer}},
+url = {http://arxiv.org/abs/1601.07823},
+year = {2016}
+}
+
+@article{Schuld2014,
+archivePrefix = {arXiv},
+arxivId = {1412.3646},
+author = {Schuld, Maria and Sinayskiy, Ilya and Petruccione, Francesco},
+doi = {10.1007/978-3-319-13560-1},
+eprint = {1412.3646},
+file = {:home/mark/QML{\_}Thesis/Paper/Publ{\_}Quantum Computing for Pattern Classification.pdf:pdf},
+isbn = {978-3-319-13559-5},
+issn = {16113349},
+keywords = {artificial,intelligence,machine learning,quantum computing,quantum machine learning},
+mendeley-groups = {QML Thesis},
+pages = {14},
+title = {{Quantum computing for pattern classification}},
+url = {http://arxiv.org/abs/1412.3646},
+year = {2014}
+}
+
 
 @article{acharya2015integrated,
   title={An integrated index for detection of sudden cardiac death using discrete wavelet transform and nonlinear features},
@@ -140,5 +172,12 @@ pages = {1--12},
 title = {{Demonstration of quantum advantage in machine learning}},
 url = {http://arxiv.org/abs/1512.06069},
 year = {2015}
+}
+
+@book{bekkerman2011scaling,
+  title={Scaling up machine learning: Parallel and distributed approaches},
+  author={Bekkerman, Ron and Bilenko, Mikhail and Langford, John},
+  year={2011},
+  publisher={Cambridge University Press}
 }
 
