--- a/proposal_latex/proposal.tex
+++ b/proposal_latex/proposal.tex
@@ -29,6 +29,7 @@
 % package for header
 \usepackage[automark]{scrpage2}
 \usepackage{braket}
+\usepackage{enumerate}
 \pagestyle{scrheadings}
 \ihead[]{Mark Fingerhuth}
 \ohead[]{\today}
@@ -54,7 +55,7 @@
 \includegraphics[width=0.5\textwidth]{logo.jpeg}
 \end{figure}
 \vspace{2cm}
-\Huge{\bf{Research Proposal for} \\ Experimental Implementation of Quantum Machine Learning Algorithms \\}}
+\Huge{\bf{Research Proposal for the} \\ Experimental Implementation of Quantum Machine Learning Algorithms \\}}
 \vspace{3cm}
 % Insert here your name and correct mail address
 \author{\Large \href{mailto:m.fingerhuth@student.maastrichtuniversity.nl}{Mark Fingerhuth}
@@ -90,7 +91,7 @@ Mixtape tote bag quinoa, deep v ramps organic pabst. Cliche trust fund twee lo-f
 
 The ability to understand spoken language, to recognize faces and to distinguish different types of fruit comes naturally to humans, even though these processes of pattern recognition and classification are inherently complex. Machine learning (ML), a subtopic of artificial intelligence, is concerned with the development of algorithms that mimic these mechanisms, thereby enabling computers to find and recognise patterns in data and classify unknown inputs based on previous training with labelled inputs. Such algorithms paved the way for e.g. human speech recognition, recommendation engines as used by Amazon and prediction algorithms that can predict heart disease from real-time electrocardiograms \citep{acharya2015integrated}.
 
-According to \cite*{bigdata}, every day approximately 2.5 quintillion (${10}^{18}$) bytes of digital data are created. This growing number implies that every area dealing with data will eventually require advanced algorithms that can make sense of data content, retrieve patterns and reveal correlations. However, most ML algorithms involve the execution of computationally expensive operations and doing so on large data sets inevitably takes a lot of time (REFERENCE?). Hence, it becomes increasingly important to find efficient ways of dealing with big data and/or reduce the computational complexity of the algorithms.
+According to \cite*{bigdata}, every day approximately 2.5 quintillion (${10}^{18}$) bytes of digital data are created. This growing number implies that every area dealing with data will eventually require advanced algorithms that can make sense of data content, retrieve patterns and reveal correlations. However, most ML algorithms involve the execution of computationally expensive operations and doing so on large data sets inevitably takes a lot of time \citep{bekkerman2011scaling}. Hence, it becomes increasingly important to find efficient ways of dealing with big data and/or reduce the computational complexity of the algorithms.
 
 A promising solution is the use of quantum computation which has been researched intensively in the last decades. Quantum computers use quantum mechanical systems and their special properties to manipulate and process information in ways that are impossible to implement on classical computers. The quantum equivalent to a classical bit is called a quantum bit (or qubit) and additionally to being in either state they can be in a linear superposition of \0 and \1. This peculiar property gives rise to so called quantum parallelism, which enables the execution of certain operations on many quantum states at the same time. However, despite this obvious advantage the real difficulty in quantum computation lies in the retrieval of the computed solution since a measurement of a qubit collapses it into a single classical bit and thereby destroys information about its previous superposition. Several quantum algorithms have been proposed that provide exponential speed-ups when compared to their classical counterparts with Shor's prime factorization algorithm being the most famous \citep{shor1994}. Hence, quantum computation bears the potential to vastly improve computational power, speed up the processing of big data and solve certain problems that are practically unsolvable on classical computers. 
 
@@ -125,9 +126,12 @@ Considering these advantages, the combination of quantum computation and classic
 
 Classical ML is a very practical topic since it can be directly tested, verified and implemented on any commercial classical computer. So far, QML has been of almost entirely theoretical nature since the required computational resources are not in place yet. QML algorithms often require a relatively large number of error-corrected qubits and some sort of quantum data storage such as the proposed quantum random access memory (qRAM) \citep{qRAM}. However, to date the maximum number of superconducting qubits reportedly used for calculation is nine, the D-Wave II quantum annealing device delivers 1152 qubits but can only solve a narrow class of problems and a qRAM has not been developed yet \citep{hydrogensimulation, dwave2}. Furthermore, qubit error-correction is still a very active research field and most of the described preliminary quantum computers deal with non error-corrected qubits with short lifetimes and are, thus, impractical for large QML implementations.
 
-Until now there has been only three experimental verifications of QML algorithms that provide proof-of-principle. \cite{Li2015} successfully distinguished a handwritten six from a nine using a Quantum Support Vector Machine on a four-qubit nuclear magnetic resonance test bench. In addition, \cite{Cai2015} were first to experimentally demonstrate quantum machine learning on a photonic quantum computer and showed that the distance between and the inner product of two vectors can indeed be computed quantum mechanically. Lastly, \cite{Riste2015} solved a learning parity problem with five superconducting qubits and found that a quantum advantage can already be observed in non error-corrected systems. Consequently, considering the large gap between the number of proposed QML algorithms and experimental realisations of scaled-down QML problems, it remains important to find QML problems which can already be implemented on currently available quantum technology. This can ultimately be seen as an attempt to shift QML from a purely theoretical research area to a more applied field such as classical ML. Furthermore, this can also lead to verification or falsification of the claims and assumptions made in the field of QML. Successful proof-of-principle studies are also crucial for further research to be funded and supported since it shows that an upscaling of quantum computational power will eventually lead to at best exponential speed ups compared to classical ML and hence has the potential to revolutionize the handling of big data.
+Until now there has been only three experimental verifications of QML algorithms that provide proof-of-principle. \cite{Li2015} successfully distinguished a handwritten six from a nine using a quantum support vector machine on a four-qubit nuclear magnetic resonance test bench. In addition, \cite{Cai2015} were first to experimentally demonstrate quantum machine learning on a photonic quantum computer and showed that the distance between and the inner product of two vectors can indeed be computed quantum mechanically. Lastly, \cite{Riste2015} solved a learning parity problem with five superconducting qubits and found that a quantum advantage can already be observed in non error-corrected systems. Consequently, considering the large gap between the number of proposed QML algorithms and experimental realisations of scaled-down QML problems, it remains important to find QML problems which can already be implemented on currently available quantum technology. 
 
+Earlier this year, technology company IBM has provided the public with access to their experimental quantum processor containing five non error-corrected superconducting qubits. The proposed research will investigate if two QML algorithms proposed by \cite{Schuld2014, Schuld2016} are already implementable using IBMs quantum computing technology and if they are able to solve scaled-down ML problems with suitable datasets. This is a step in the attempt to shift QML from a purely theoretical research area to a more applied field such as classical ML. Furthermore, this can also lead to verification or falsification of the claims and assumptions made in the field of QML. Successful proof-of-principle studies are crucial for further research to be funded and supported since it shows that an upscaling of quantum computational power will eventually lead to at best exponential speed ups compared to classical ML and hence has the potential to revolutionize the handling of big data.
 
+%Does this belong here?
+%The proposed research will identify small ML problems and find suitable datasets, that can already be solved using QML algorithms and current quantum computing technology. Earlier this year, technology company IBM has provided the public with access to their experimental quantum processor containing five non error-corrected superconducting qubits. Investigated will be two algorithms proposed by \cite{Schuld2014, Schuld2016} that focus on supervised pattern classification based on linear regression and vector distance measurements.
 
 %>> what is your point? what exactly do you wanna do and why? why does it makes sense?
 %>> (Background and literature review/current state)
@@ -139,22 +143,50 @@ Until now there has been only three experimental verifications of QML algorithms
 %- there are many proposed quantum Machine Learning algorithms which should hypothetically work but who have not been implemented or verified experimentally yet
 %- Finding very small machine learning problems which can be implemented on IBM’s QC would constitute a proof-of-concept for the quantum machine learning age. This is crucial for further research to be funded and supported since it shows that an upscaling of QCs will eventually lead to huge speed ups in ML routines and therefore 			revolutionize the handling of big data
 
-\newpage
 \subsection{Research Question}
 \label{subsec:researchquestion}
 
-Is it possible to already implement and solve a small ML problem on IBMs publicly available QC? 
+Based on the small number of experimental realizations of QML algorithms, this research will address the following question:
+ 
+\centering\textbf{Is it possible to already implement and solve a small ML problem on IBMs publicly available quantum computer?}
 
+%Alternative:
+%Is it possible to experimentally demonstrate that two QML algorithms proposed by \cite{Schuld2014, Schuld2016} can already solve a small ML problem using classical simulation or IBMs quantum processor?
+
+\flushleft
+The following sections will outline the steps required and the tools used in order to answer this research question. 
+
+\newpage
 \subsection{Research Objectives}
 \label{subsec:researchobjectives}
 
-Essentially: find a QAlg + a downscaled ML problem + a dataset and implement the circuit in a quantum system (ideally on a real QC otherwise simulate it in Liquid)
+% Making clear that only 2 algorithms are used!
+The proposed research will be solely based on the two QML algorithms described in \cite{Schuld2014, Schuld2016}. In detail, \cite{Schuld2014} is a quantum version of the distance-weighted k-nearest neighbour algorithm, outlined in brief detail in the following section. Next, \cite{Schuld2016} details a quantum algorithm for a linear regression model for supervised pattern recognition. The first step towards their experimental implementation will be the identification of one or several small ML problems that can be executed on five qubits only. For example, this might include the characterization of colours or differentiation of digits or letters. It thereby plays an important role if the respective ML problem can be approached using a very reduced dataset such as the average pixel brightness or the ratio of pixels above and below the bisector of the image. Ideally, the data should be representable as a 2-D vector such that it requires only a few qubits to encode the information quantum mechanically.
 
-classification problems such as classifying handwritten digits/colours or fitting functions onto small datasets could be scaled down and executed on 5 Qbits
+Both algorithms assume that the classical data is readily available in the form of quantum states. Hence, the first crucial step will be translating the classical data into such states, constituting the first challenge since it is a non-trivial and still researched topic. For each algorithm, this will be done by applying a series of quantum logic gates to the qubits. Next, two separate quantum circuits consisting of quantum logic gates will be designed that accurately represent the two QML algorithms as outlined in the paper of \cite{Schuld2014, Schuld2016}. Finally, the computed solution needs to be retrieved through measurement and by repeating the execution of the algorithm a probabilty distribution will be obtained that ideally represents the solution to the given problem.
 
-many QML algorithms assume the data to already be prepared in some particular quantum data format and also assume all kind of other things
+In summary, the research objectives are:
 
-This includes a) the preprocessing of data, b) the preparation of a suitable quantum state containing the training data and the to be 		classified data, c) the execution of a quantum circuit and finally d) the retrieval of the solution to the problem.
+\begin{enumerate}[a)]
+\item Find small implementable ML problems
+\item Generate or find suitable datasets
+\item Encode the classical data into quantum states
+\item Design quantum circuits representing the QML algorithms
+\item Execute the entire circuit repeatedly (separately for the two algorithms)
+\item Retrieve the solution from the probability distribution
+\end{enumerate}
+
+%implement the circuit in a quantum system (ideally on a real QC otherwise simulate it in Liquid)
+%many QML algorithms assume the data to already be prepared in some particular quantum data format and also assume all kind of other things
+%This includes a) the preprocessing of data, b) the preparation of a suitable quantum state containing the training data and the to be classified data, 
+%c) the execution of a quantum circuit and finally d) the retrieval of the solution to the problem.
+%shall I give examples for such small ML problems?
+%Thereafter, 
+%identify small ML problems and find suitable datasets, that can already be solved using QML algorithms and current quantum computing technology. Earlier this year, technology company IBM has provided the public with access to their experimental quantum processor containing five non error-corrected superconducting qubits. Investigated will be two algorithms proposed by \cite{Schuld2014, Schuld2016} that focus on supervised pattern classification based on linear regression and vector distance measurements.
+%Essentially: find a QAlg + a downscaled ML problem + a dataset
+%classification problems such as classifying handwritten digits/colours or fitting functions onto small datasets could be scaled down and executed on 5 Qbits
+
+\newpage
 		
 \section{Research Methods}
 \label{sec:researchmethods}
@@ -167,10 +199,20 @@ shortly introduce the IBM QC and what Liquid is
 \section{Timeline}
 \label{sec:timeline}
 
-insert a nicely designed timescheme here!
+The projected timeline for the proposed bachelor thesis research is shown below.
 
-\section{Outlook \& Conclusion}
-\label{sec:outlookandconclusion}
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{ready_timeline.png}
+\end{figure}
+
+\section{Research Impact}
+\label{sec:research impact}
+
+axidermy edison bulb plaid, chia swag organic roof party shabby chic raw denim tilde waistcoat. Swag everyday carry iPhone, pitchfork pop-up ethical blog small batch la croix before they sold out chartreuse chia gastropub craft beer crucifix. Occupy mustache organic tumblr, scenester cred listicle kombucha lumbersexual. Crucifix tumeric bushwick, organic unicorn ugh food truck 90's echo park freegan mumblecore chia shabby chic. Keytar actually intelligentsia mumblecore, ugh selvage schlitz tousled iPhone cray paleo wayfarers snackwave viral humblebrag. Subway tile pop-up squid church-key craft beer. Church-key la croix cornhole kitsch 8-bit gluten-free.
+
+\section{Conclusion}
+\label{sec:conclusion}
 axidermy edison bulb plaid, chia swag organic roof party shabby chic raw denim tilde waistcoat. Swag everyday carry iPhone, pitchfork pop-up ethical blog small batch la croix before they sold out chartreuse chia gastropub craft beer crucifix. Occupy mustache organic tumblr, scenester cred listicle kombucha lumbersexual. Crucifix tumeric bushwick, organic unicorn ugh food truck 90's echo park freegan mumblecore chia shabby chic. Keytar actually intelligentsia mumblecore, ugh selvage schlitz tousled iPhone cray paleo wayfarers snackwave viral humblebrag. Subway tile pop-up squid church-key craft beer. Church-key la croix cornhole kitsch 8-bit gluten-free.
 
 \newpage
